--- a/Logging/Logging.csproj
+++ b/Logging/Logging.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LogHandler.cs" />
+    <Compile Include="LogResponseType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResponseObject.cs" />
   </ItemGroup>
